Improved MANIFEST.in

--- a/{{cookiecutter.app_name}}/MANIFEST.in
+++ b/{{cookiecutter.app_name}}/MANIFEST.in
@@ -1,6 +1,7 @@
 global-exclude *.py[co] __pycache__
 
-graft laboite
+graft laboite/apps/*/static
+graft laboite/apps/*/templates
 
 include *.rst *.md
 
